public/css/style.css
/* ... */
@media(max-width:479px) {
    .gen-movie-contain-style-2 .gen-movie-action .gen-btn-container.button-2 {
        margin-top: 15px;
    }

    .gen-front-image a svg {
        height: 60px;
    }

    .gen-front-image a span {
        font-size: 18px;
    }

    .gen-banner-movies .gen-movie-contain .gen-movie-info h3,
    .gen-movie-contain-style-2 .gen-movie-info h3 {
        font-size: 30px;
        line-height: 38px;
    }
}


/*======================================================
Icon-Box
======================================================*/

.gen-icon-box-style-1 {
    padding: 45px 45px 45px 45px;
    background-color: var(--black-color);
    border-style: solid;
    border-width: 0px 0px 3px 0px;
    border-color: #E50916;
    text-align: center;
}

.gen-icon-box-style-1 .gen-icon-box-icon {
    margin-bottom: 25px;
}

.gen-icon-box-style-1 .gen-icon-box-icon .gen-icon-animation {
    display: inline-block;
    background-color: #E50916;
    color: #ffffff;
    text-align: center;
    border: 3px solid #ffffff;
    border-radius: 50%;
    height: 100px;
    width: 100px;
    line-height: 100px;
    font-size: 50px;
}

.gen-icon-box-style-1 .gen-icon-box-content .gen-icon-box-description {
    color: #FFFFFF;
    font-family: var(--body-fonts);
    font-weight: 400;
    margin-bottom: 0;
}

.page-link {
    transition: .3s !important;
    -webkit-transition: .3s !important;
    -moz-transition: .3s !important;
    -ms-transition: .3s !important;
    -o-transition: .3s !important;
}

.page-link:hover {
    background-color: #b81d24 !important;
    color: #ffffff !important;
}

.excerpt {
    display: -webkit-box;
    box-orient: vertical;
    -webkit-box-orient: vertical;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    overflow: hidden;
    text-overflow: ellipsis;
}

@media (max-width:767px) {
    .gen-blog-spot-video iframe {
        height: auto;
    }
}

/*===========================================================================================================*/

